--- a/style.css
+++ b/style.css
@@ -69,6 +69,11 @@ button {
     transition: transform 0.4s ease;
 }
 
+.score {
+    color: rgb(22, 151, 22);
+    font-weight: bolder;
+}
+
 .food-item {
     transform: scale(1.15);
 }
